# Torch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
example/: CMakeLists.txt  Quad.cpp  Quad.h  Settings.h  TriangleList.cpp  TriangleList.h  VulkanApp.cpp  VulkanApp.h  main.cpp
include/trc/: Animation.h  AnimationDataStorage.h  AnimationEngine.h  AnimationRegistry.h  Asset.h  AssetBase.h  AssetDescriptor.h  AssetID.h  AssetIds.h  AssetManager.h  AssetManager.inl  AssetManagerInterface.h  AssetPath.h  AssetPlugin.h  AssetReference.h  AssetRegistry.h  AssetRegistry.inl  AssetRegistryModule.h  AssetRegistryModuleStorage.h  AssetRegistryModuleStorage.inl  AssetSource.h  AssetUtils.h  Assets.h  Boilerplate.h  CMakeLists.txt  Camera.h  CommandCollector.h  ComputePass.h  DeferredRenderConfig.h  DescriptorCreateHelpers.h  DescriptorProvider.h  DescriptorProviderWrapper.h  DescriptorSetUtils.h  Drawable.h  DrawableBase.h  DrawableData.h  DrawableInstanced.h  FinalLighting.h  FinalLightingPass.h  FlagCombination.h  (+65 more)
new_arch/: BasicScene.cpp  BasicScene.h  CMakeLists.txt  CommandCollector.h  Drawable.cpp  Drawable.h  DrawableBase.cpp  DrawableBase.h  Engine.h  Framebuffer.h  IndexMap.h  IndexMap.inl  Node.cpp  Node.h  Pipeline.h  PipelineBuilder.cpp  PipelineBuilder.h  Renderpass.cpp  Renderpass.h  Scene.cpp  Scene.h  SceneRegisterable.cpp  Shader.h  SortedObjectPool.h  StaticDrawable.h  StaticDrawable.inl  main.cpp
new_arch/base/: CMakeLists.txt  DrawableStatic.h  SceneBase.cpp  SceneBase.h  SceneRegisterable.cpp  SceneRegisterable.h
new_arch/data_utils/: CMakeLists.txt  IndexMap.h  ObjectPool.h  ObjectPool.inl  SelfManagedObject.h
new_arch/utils/: CMakeLists.txt  Transformation.cpp  Transformation.h
shaders/: CMakeLists.txt  animation.glsl  asset_registry_descriptor.glsl  asset_registry_descriptor_template.glsl  compile.bat  compositing.comp  final_lighting.comp  final_lighting.frag  final_lighting.vert  fragment.frag  light.glsl  lighting.glsl  material.glsl  mesh_shading.frag  mesh_shading.mesh  resources.glsl  shadow.glsl  transparency.glsl  vertex.glsl  vertex.vert
shaders/basic_ray/: closesthit.rchit  miss.rmiss  raygen.rgen
shaders/compute/: mlaa_blend_colors.comp  mlaa_calc_blend_weights.comp  mlaa_gen_edges.comp
shaders/drawable/: deferred.frag  deferred.frag.spv  deferred.vert  deferred.vert.spv  deferred_animated.vert  instanced.vert  pool_instance.vert  pool_instance_shadow.vert  shadow.vert  shadow_animated.vert  shadow_instanced.vert  transparent.frag
shaders/flora/: grass.frag  grass.vert
shaders/material_utils/: animation.glsl  animation_data.glsl  append_fragment.glsl  light.glsl  lighting.glsl  shadow.glsl  simple_material.glsl
shaders/particles/: alpha_blend.frag  alpha_discard.frag  deferred.frag  deferred.vert  shadow.vert
shaders/ray_tracing/: anyhit.rahit  blue.rmiss  callable.rcall  closesthit.rchit  hit_utils.glsl  miss.rmiss  raygen.rgen  reflect.rchit  reflect.rgen
shaders/spirv_out/: fragment.frag.spv  vertex.vert.spv
shaders/test/: miss_orange.rmiss  raygen.rgen
shaders/text/: static_text.frag  static_text.vert
shaders/ui/: image_blend.comp  line.frag  line.vert  quad.frag  quad.vert  text.frag  text.vert
src/: Animation.cpp  AnimationDataStorage.cpp  AnimationEngine.cpp  AnimationRegistry.cpp  AssetDescriptor.cpp  AssetIds.cpp  AssetManager.cpp  AssetPath.cpp  AssetPlugin.cpp  AssetRegistry.cpp  AssetRegistryModuleStorage.cpp  AssetSource.cpp  AssetUtils.cpp  CMakeLists.txt  Camera.cpp  CommandCollector.cpp  ComputePass.cpp  DeferredRenderConfig.cpp  DescriptorProvider.cpp  DescriptorProviderWrapper.cpp  DescriptorSetUtils.cpp  Drawable.cpp  DrawableData.cpp  DrawableInstanced.cpp  FinalLighting.cpp  FinalLightingPass.cpp  Font.cpp  Framebuffer.cpp  Framebuffer.h  GBuffer.cpp  GBufferDepthReader.cpp  GBufferPass.cpp  Geometry.cpp  GeometryRegistry.cpp  Glyph.cpp  ImageClear.cpp  Light.cpp  LightRegistry.cpp  LightSceneModule.cpp  MaterialRegistry.cpp  (+48 more)
src/asset_import/: AssetImporter.cpp  AssetUtils.cpp  CMakeLists.txt  FBXLoader.cpp
src/assets/: AnimationRegistry.cpp  AssetDataProxy.cpp  AssetImport.cpp  AssetManager.cpp  AssetManagerBase.cpp  AssetPath.cpp  AssetRegistry.cpp  AssetRegistryModuleStorage.cpp  AssetSource.cpp  AssetStorage.cpp  AssimpImporter.cpp  CMakeLists.txt  FBXImporter.cpp  GeneratedGeometry.cpp  GeometryRegistry.cpp  InternalFormat.cpp  MaterialRegistry.cpp  PNGConvert.cpp  RigRegistry.cpp  SharedDescriptorSet.cpp  SimpleMaterial.cpp  TextureRegistry.cpp
src/base/: Barriers.cpp  Buffer.cpp  CMakeLists.txt  Device.cpp  ExclusiveQueue.cpp  FrameClock.cpp  Image.cpp  ImageUtils.cpp  Logging.cpp  Memory.cpp  MemoryPool.cpp  PhysicalDevice.cpp  QueueManager.cpp  SceneBase.cpp  SceneRegisterable.cpp  ShaderProgram.cpp  Swapchain.cpp  VulkanDebug.cpp  VulkanInstance.cpp
src/core/: CMakeLists.txt  Camera.cpp  CommandCollector.cpp  CommandRecorder.cpp  ComputePipelineBuilder.cpp  DataFlow.cpp  DescriptorProvider.cpp  DescriptorProviderWrapper.cpp  DescriptorRegistry.cpp  DeviceTask.cpp  DynamicRenderPassContainer.cpp  Frame.cpp  FrameRenderState.cpp  Instance.cpp  Pipeline.cpp  PipelineBuilder.cpp  PipelineLayout.cpp  PipelineLayoutBuilder.cpp  PipelineLayoutTemplate.cpp  PipelineRegistry.cpp  PipelineTemplate.cpp  RenderConfigImplHelper.cpp  RenderConfiguration.cpp  RenderDataDescriptor.cpp  RenderGraph.cpp  RenderLayout.cpp  RenderPass.cpp  RenderPassRegistry.cpp  RenderPipeline.cpp  RenderPlugin.cpp  RenderPluginContext.cpp  RenderTarget.cpp  (+6 more)
test/: CMakeLists.txt  arch.cpp  basic_ray.cpp  basic_setup.cpp  buffer_create_performance.cpp  drawable_chain.cpp  flora.cpp  font.cpp  gui.cpp  imgui_integration.cpp  main.cpp  many_instances.cpp  material_editor.cpp  materials.cpp  mesh_shading.cpp  new_scene_interface.cpp  ray_tracing.cpp  rt_integration.cpp  shader_editing.cpp  viewports.cpp  vk_base.cpp  window_functions.cpp
tools/: CMakeLists.txt  gen_coverage_report  shader_compiler.cpp
torch_util/: CMakeLists.txt
util_lib/: .gitignore  CMakeLists.txt
vk_base/: CMakeLists.txt
(+983 files in other folders)
