target_include_directories(torch PUBLIC
    ${CMAKE_BINARY_DIR}/generated-sources/include
)

target_sources(
    torch
    PRIVATE
        AnimationEngine.cpp
        AssetDescriptor.cpp
        Camera.cpp
        DescriptorSetUtils.cpp
        FinalLighting.cpp
        Framebuffer.cpp
        GBuffer.cpp
        GBufferDepthReader.cpp
        GBufferPass.cpp
        Light.cpp
        LightRegistry.cpp
        Meshlet.cpp
        Node.cpp
        PipelineDefinitions.cpp
        RasterPlugin.cpp
        RasterSceneBase.cpp
        RasterSceneModule.cpp
        RasterTasks.cpp
        RaySceneModule.cpp
        RenderDataDescriptor.cpp
        RenderPassShadow.cpp
        SceneDescriptor.cpp
        ShaderLoader.cpp
        ShaderPath.cpp
        ShadowPool.cpp
        TopLevelAccelerationStructureBuildPass.cpp
        Torch.cpp
        TorchImplementation.cpp
        TorchRenderConfig.cpp
        Transformation.cpp
)

add_subdirectory(assets)
add_subdirectory(base)
add_subdirectory(core)
add_subdirectory(drawable)
add_subdirectory(material)
add_subdirectory(particle)
add_subdirectory(ray_tracing)
add_subdirectory(text)
add_subdirectory(util)
