target_include_directories(torch PUBLIC
    ${CMAKE_BINARY_DIR}/generated-sources/include
)

target_sources(
    torch
    PRIVATE
        AnimationEngine.cpp
        AssetDescriptor.cpp
        AssetPlugin.cpp
        Camera.cpp
        DescriptorSetUtils.cpp
        FinalLighting.cpp
        Framebuffer.cpp
        GBuffer.cpp
        GBufferDepthReader.cpp
        GBufferPass.cpp
        Light.cpp
        LightRegistry.cpp
        LightSceneModule.cpp
        Meshlet.cpp
        Node.cpp
        PipelineDefinitions.cpp
        RasterPlugin.cpp
        RasterSceneBase.cpp
        RasterTasks.cpp
        RaySceneModule.cpp
        RenderDataDescriptor.cpp
        RenderPassShadow.cpp
        SceneDescriptor.cpp
        ShaderLoader.cpp
        ShaderPath.cpp
        ShadowPool.cpp
        SwapchainPlugin.cpp
        TopLevelAccelerationStructureBuilder.cpp
        Torch.cpp
        Transformation.cpp
)

add_subdirectory(assets)
add_subdirectory(base)
add_subdirectory(core)
add_subdirectory(drawable)
add_subdirectory(material)
add_subdirectory(particle)
add_subdirectory(ray_tracing)
add_subdirectory(text)
add_subdirectory(util)
